--- a/client/src/style.css
+++ b/client/src/style.css
@@ -515,6 +515,7 @@ body {
     margin: 5px;
     justify-self: center;
     font-size: 36px;
+    color: black;
   }
   .titleTwo {
     width: 100vw;
