--- a/client/src/style.css
+++ b/client/src/style.css
@@ -467,6 +467,8 @@ body {
     color: #FBFAF5;
     margin: 0;
     font-family: against;
+    display: flex;
+    justify-content: center;
     padding: 0;
   }
   .app {
