--- a/client/src/style.css
+++ b/client/src/style.css
@@ -521,7 +521,7 @@ body {
   .titleTwo {
     width: 100vw;
     font-size: 18px;
-    justify-self: center;
+/*     justify-self: center; */
     text-align: center;
   }
   .poster {
