--- a/client/src/style.css
+++ b/client/src/style.css
@@ -556,7 +556,7 @@ table {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    width: auto;
+    width: 90vw;
   }
   .titleOne {
     margin: 5px;
