--- a/client/src/style.css
+++ b/client/src/style.css
@@ -831,6 +831,9 @@ table {
     text-align: center;
     margin-bottom: 5vh;
   }
+  .reception > a {
+    margin-bottom: 10px;
+  }
   .detail {
     font-size: 12px;
     margin-bottom: 20px;
