--- a/client/src/style.css
+++ b/client/src/style.css
@@ -893,7 +893,7 @@ table {
     font-size: 14px;
     border-radius: 5px;
     transition: 0.3s;
-/*     margin-top: 30px; */
+    margin-top: 15px;
   }
   .rsvp button:hover {
     transform: scale(1.01);
@@ -910,7 +910,8 @@ table {
     width: 85%;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 30px;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
   .radio {
     display:flex;
