--- a/client/src/style.css
+++ b/client/src/style.css
@@ -779,6 +779,7 @@ table {
   .react-calendar__navigation {
     display: flex;
     height: 44px;
+    background: rgb(0,0,0,.2);
     margin-bottom: 1em;
     font-family: inherit;
   }
