--- a/client/src/style.css
+++ b/client/src/style.css
@@ -756,7 +756,7 @@ table {
     bottom: 20px;
     width: 300px;
     max-width: 100%;
-    background: rgb(0,0,0,.2);
+    background: rgb(0, 0, 87,0.1);
     border: none;
     font-family: against;
     line-height: 0.75em;
@@ -779,7 +779,7 @@ table {
   .react-calendar__navigation {
     display: flex;
     height: 44px;
-    background: rgb(0,0,0,.2);
+    background: rgb(0, 0, 87,0.1);
     margin-bottom: 1em;
     font-family: inherit;
   }
