--- a/client/src/style.css
+++ b/client/src/style.css
@@ -659,17 +659,17 @@ table {
   .frontImg {
     z-index: 3;
     position: absolute;
-    width: 80vw;
+    width: 70vw;
     bottom: 0;
-    left: 15px;
+    left: 30px;
     border-top: 10px solid #FBFAF5;
     border-right: 10px solid #FBFAF5;
   }
   .backImg {
     position: absolute;
     z-index: 2;
-    width: 80vw;
-    right: 15px;
+    width: 70vw;
+    right: 30px;
     top: 10vh;
   }
 /*#endregion*/
@@ -745,8 +745,9 @@ table {
     justify-content: center;
     align-items: center;
     position: relative;
-    margin-bottom: 5vh;
+    margin-bottom: 10vh;
     overflow: hidden;
+    margin-top:5vh;
   }
   .calImg {
     height: 100%;
