--- a/client/src/style.css
+++ b/client/src/style.css
@@ -757,8 +757,7 @@ table {
     bottom: 20px;
     width: 300px;
     max-width: 100%;
-/*     background: rgb(0, 0, 87,0.1); */
-    background: rgb(0, 0, 87);
+    background: rgb(0, 0, 87,0.1);
     border: none;
     font-family: against;
     line-height: 0.75em;
@@ -781,8 +780,8 @@ table {
   .react-calendar__navigation {
     display: flex;
     height: 44px;
-    background: transparent;
-/*     background: rgb(0, 0, 87,0); */
+    background-color: rgb(0, 0, 87,0);
+    color: rgb(0, 0, 87,0);
     margin-bottom: 1em;
     font-family: inherit;
   }
