--- a/client/src/style.css
+++ b/client/src/style.css
@@ -740,7 +740,7 @@ table {
 /*#region Calendar*/
   .calCont {
     width: 100vw;
-    height: 80vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -754,8 +754,8 @@ table {
   }
   .react-calendar {
     position:absolute;
-    bottom: 20px;
-    width: 300px;
+    bottom: 10px;
+    width: 250px;
     max-width: 100%;
     background: rgb(0, 0, 87,0.1);
     border: none;
@@ -779,11 +779,14 @@ table {
   }
   .react-calendar__navigation {
     display: flex;
-    height: 44px;
+    height: 30px;
     background-color: rgb(0, 0, 87,0);
     color: rgb(0, 0, 87,0);
     margin-bottom: 1em;
     font-family: inherit;
+  }
+  .react-calendar__navigation__label {
+    background-color: rgb(0, 0, 87,0.1);
   }
   .react-calendar__month-view__weekdays {
     text-align: center;
