--- a/client/src/style.css
+++ b/client/src/style.css
@@ -785,6 +785,9 @@ table {
     margin-bottom: 1em;
     font-family: inherit;
   }
+  .react-calendar__navigation__arrow {
+    opacity: 0;
+  }
   .react-calendar__navigation__label {
     background-color: rgb(0, 0, 87,0.1);
   }
