--- a/client/src/style.css
+++ b/client/src/style.css
@@ -754,8 +754,8 @@ table {
   }
   .react-calendar {
     position:absolute;
-    bottom: 10px;
-    width: 250px;
+    bottom: 8vh;
+    width: 300px;
     max-width: 100%;
     background: rgb(0, 0, 87,0.1);
     border: none;
@@ -779,7 +779,7 @@ table {
   }
   .react-calendar__navigation {
     display: flex;
-    height: 30px;
+    height: 35px;
     color: rgb(0, 0, 87,0);
     margin-bottom: 1em;
     font-family: inherit;
