--- a/client/src/style.css
+++ b/client/src/style.css
@@ -783,13 +783,13 @@ table {
     color: rgb(0, 0, 87,0);
     margin-bottom: 1em;
     font-family: inherit;
-    font-size: 0.85em;
   }
   .react-calendar__navigation__arrow {
     background-color: rgb(0, 0, 87,0.1);
   }
   .react-calendar__navigation__label {
     background-color: rgb(0, 0, 87,0.1);
+    font-size: 14px;
   }
   .react-calendar__month-view__weekdays {
     text-align: center;
